--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
+    "nodemailer": "^6.9.15",
     "pino-http": "^10.3.0"
   },
   "description": ""
